@@ -110,6 +110,9 @@ Library
 
 - Bug #1576241: fix functools.wraps() to work on built-in functions.
 
+- Patch #1574068: fix urllib/urllib2 to not insert line breaks when
+  HTTP authentication data was very long.
+
 - Fix a bug in traceback.format_exception_only() that led to an error
   being raised when print_exc() was called without an exception set.
   In version 2.4, this printed "None", restored that behavior.
